--- a/index.html
+++ b/index.html
@@ -3,31 +3,25 @@
 	<head>
 	<title>Chanjoo Tiffany Park</title>
 	<meta charset="utf-8">
-		<link href="https://fonts.googleapis.com/css?family=Overpass:400,800" type="text/css" rel='stylesheet'>
-		<style>
-			h1{font-family: overpass; text-align: center;}
-			p{font-family: overpass;
-				padding:  0% 0% 0% 30%;}
-			h2{font-family: overpass; text-align: center;}
-			ol{font-family: overpass;
-				padding:  0% 0% 0% 28%;}
-
-		</style> 
 	</head>
 
 	<body>
-	<h1>Reading Responses</h1>
-	<p>
-	</br>
-		<h2>Week 1</h2>
 
-		<ol>
-		<li>What is a benefit of having own personal website that is independent of the preexisting platforms?</li>
-		<li>What is the power and potential of a personal website?</li>
-		<li>What is the role of an artist on the web and the internet?</li>
-		<li>Is a website just a medium or is it way beyond that?</li>
-		</ol>
-	</p>
+	<h1>My Class Site</h1>
+	<a href="">email?</a>
+
+	<ul>Exercise
+		<li>
+			<a href="exercise1/exercise1.html">week 1</a>
+		</li>
+	</ul>
+	
+	<ul>Readings
+		<li>
+			<a href="reading1/index.html">week 1</a>
+		</li>
+	</ul>
+
 	</body>
 
 </html>
