--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Chanjoo Tiffany Park</title>
-	<meta charset="utf-8">
+		<title>Chanjoo Tiffany Park</title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="https://use.typekit.net/kxs4cam.css">
+		<style>
+			body{
+				font-family: neue-haas-grotesk-text, sans-serif;
+				font-weight: 400;
+				font-style: normal;
+				font-size: 20px;
+			}
+			
+		</style> 
 	</head>
 
 	<body>
 
 	<h1>My Class Site</h1>
-	<a href="">email?</a>
+	<a href="">email</a>
 
 	<ul>Exercise
-		<li>
-			<a href="exercise1/exercise1.html">week 1</a>
-		</li>
+		<li><a href="exercise1/exercise1.html">week 1</a></li>
+		<li><a href="exercise2/page1.html">week 2</a></li>
 	</ul>
 	
 	<ul>Readings
