--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<ul>Exercise
 		<li><a href="exercise1/exercise1.html">week 1</a></li>
 		<li><a href="exercise2/page1.html">week 2</a></li>
+		<li><a href="exercise3/index.html">week 3</a></li>
 	</ul>
 	
 	<ul>Readings
