--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<li><a href="exercise2/page1.html">week 2</a></li>
 		<li><a href="exercise3/index.html">week 3</a></li>
 		<li><a href="exercise4/index.html">week 4</a></li>
+		<li><a href="exercise5/index.html">week 5</a></li>
 	</ul>
 	
 	<ul>Readings
