--- a/interface/square.html
+++ b/interface/square.html
@@ -3,18 +3,18 @@
 	<head>
 		<title>Interface</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="botstyle.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<style>
 			a{
 				position: absolute;
-				top: 1%;
-				left: 94%;
+				top: 1vw;
+				right: 2vw;
 				text-decoration: none;
 				color: white;
 				transform: rotate(90deg);
-				font-size:5vw;
+				font-size:72px;
 			}
 
 			a:visited{color: white;
@@ -23,10 +23,10 @@
 			button{
 				position: absolute;
 				top: 69%;
-				right: 2%;
-				width: 4vw;
-				height: 4vw;
-				border-radius: 4vw;
+				right: 2vw;
+				width: 60px;
+				height: 60px;
+				border-radius: 60px;
 				background-color: white;
 			}
 
