--- a/interface/index.html
+++ b/interface/index.html
@@ -14,9 +14,7 @@
 
 	<body>
 		<p>
-			
-			
-			<a href="a_a.html"><div id="box">A_A</div></a>
+			<div id="box">A_A</div>
 			<div id="box">B_B</div>
 			<div id="box">C_C</div>
 			<div id="box">D_D</div>
@@ -54,10 +52,8 @@
 			<div id="box">0_0</div>
 			<div id="box">!_!</div>
 			<div id="box">?_?</div>
+			<div id="box">;_;</div>
 			<div id="box">/_/</div>
-			<div id="box">\_\</div>
-			<div id="box">/_\</div>
-			<div id="box">\_/</div>
 			<div id="box">@_@</div>
 			<div id="box">#_#</div>
 			<div id="box">$_$</div>
@@ -66,8 +62,6 @@
 			<div id="box">&_&</div>
 			<div id="box">*_*</div>
 			<div id="box">)_(</div>
-			<div id="box">(_(</div>
-			<div id="box">)_)</div>
 			<div id="box">©_©</div>
 			<div id="box">-_-</div>
 			<div id="box">+_+</div>
@@ -106,6 +100,30 @@
 			<div id="box">ㅠ_ㅠ</div>
 			<div id="box">ㅗ_ㅗ</div>
 			<div id="box">ㅛ_ㅛ</div>
+			<div id="box">ㅡ_ㅡ</div>
+			<div id="box">ㅣ_ㅣ</div>
+			<div id="box">♠_♠</div>
+			<div id="box">♣_♣</div>
+			<div id="box">♥_♥</div>
+			<div id="box">♦_♦</div>
+			<div id="box">◊_◊</div>
+			<div id="box">⊕_⊕</div>
+			<div id="box">⊗_⊗</div>
+			<div id="box">≈_≈</div>
+			<div id="box">≡_≡</div>
+			<div id="box">∴_∴</div>
+			<div id="box">∞_∞</div>
+			<div id="box">∂_∂</div>
+			<div id="box">Ø_Ø</div>
+			<div id="box">×_×</div>
+			<div id="box">日_日</div>
+			<div id="box">Ÿ_Ÿ</div>
+			<div id="box">Γ_Γ</div>
+			<div id="box">Π_Π</div>
+			<div id="box">Ω_Ω</div>
+			<div id="box">β_β</div>
+			<div id="box">θ_θ</div>
+			<div id="box">σ_σ</div>
 		</p>
 	</body>
 	<script src="jquery.js"></script>
