--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		<li><a href="exercise3/index.html">week 3</a></li>
 		<li><a href="exercise4/index.html">week 4</a></li>
 		<li><a href="exercise5/index.html">week 5</a></li>
-		<li><a href="interface/square.html">Interface</a></li>
+		<li><a href="interface/interface.html">Interface</a></li>
+		<li><a href="interface/index.html">Final</a></li>
 	</ul>
 	
 	<ul>Readings
