--- a/interface/index.html
+++ b/interface/index.html
@@ -7,53 +7,85 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 		<style>
+			body{
+				margin:4vh 0vw 4vh 2vw;
+				}
+
+			p{
+				margin: 0;
+			}
 			/* unvisited link */
 			a:link{
-				position: absolute;
-				bottom: 8%;
-				right: 10%;
-				width: 65%;
-				height: 60%;
+				text-decoration: none;
+				width: 5.5%;
+				display:inline-block;
 				opacity: 0.7;
 				border-style: outset;
-				border-width: 6vw;
+				border-width: 3vw;
+				margin-bottom: 0.4vw;
 
 				font-family: Roboto;
 				font-size: 1vw;
 				padding: 1.2vw 1vw 0.8vw 1vw;
-				line-height: 1.5vw;
 				}
 
 			/* visited link */
 			a:visited {
+				text-decoration: none;
 				color: thistle;
 			}
 
 			/* mouse over link */
 			a:hover {
+				text-decoration: none;
 				opacity: 0.3;
 			}
 
 			/* selected link */
 			a:active {
-			}
-
-			#click{
-				position: absolute;
-				bottom: 45%;
-				right: 22.5%;
-				font-family: Roboto;
-				font-size: 6vw;
-				opacity: 1;
+				text-decoration: none;
 			}
 
 		</style> 
 	</head>
-
 	<body>
 		<p>
-			<a href="mood.html"></a>
-			<div id="click">Click to Win a Mood</div>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			<a href="mood.html">Click to Win a Mood</a>
+			
 		</p>
 	</body>
 	<script src="jquery.js"></script>
