--- a/performance/index1.html
+++ b/performance/index1.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>performance</title>
+		<title>what</title>
 		<meta charset="utf-8">
+		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 		<style>
 			body{
 				font-family: helvetica;
@@ -13,61 +14,6 @@
 
 	<body>
 		<p>
-			<!--
-				animation1 {
-				0% opacity 1
-				50% opacity: 0
-				100% opacity: 1
-				}
-
-				style1 {
-				color: black;
-				opacity: 1;
-				}
-
-
-								animation1 {
-				0% opacity .8
-				20% opacity: 1;
-				50% opacity: 0
-				100% opacity: 1
-				}
-
-				style2 {
-				color: black;
-				opacity: .8;
-				}
-
-			mdash
-			What-is life and what is human why are we here and what is existing why do we think and why do we think what we think why am I having all these thoughts why are people the way they are why is everyone so different what is culture what is systems what is country and what defines a culture what is cultural identity and what forms cultural identity what is identity what defines you you how do I define myself what is the meaning of names 
-
-
-			Who am I
-			how does my name define me 
-			What are others
-			How am I related with others
-			What are relationships
-			What are connections
-			What does it mean to be connected
-			What is language
-			What are systems
-			What are cultures
-			What are friends
-			What is society
-			What is humanity
-			What is evolution
-			What is civilization
-			What is reality
-			What is real and what is fake
-			Why do we think
-			What is art
-			What is design
-			What is creativity
-			What are inspirations
-			What is cognitive thinking
-			 -->
-
-
 			  <span style='color: #000000'>W</span>
 			  <span style='color: #101010'>h</span>
 			  <span style='color: #202020'>o</span>
