--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 		<li><a href="exercise4/index.html">week 4</a></li>
 		<li><a href="exercise5/index.html">week 5</a></li>
 		<li><a href="interface/interface.html">Interface</a></li>
-		<li><a href="interface/index.html">Final</a></li>
+		<li><a href="interface/index.html">Mood</a></li>
+		<li><a href="performance/index.html">Mood</a></li>
 	</ul>
 	
 	<ul>Readings
