--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<li><a href="exercise5/index.html">week 5</a></li>
 		<li><a href="interface/interface.html">Interface</a></li>
 		<li><a href="interface/index.html">Mood</a></li>
-		<li><a href="performance/index.html">Mood</a></li>
+		<li><a href="performance/index.html">What is</a></li>
 	</ul>
 	
 	<ul>Readings
