--- a/performance/index.html
+++ b/performance/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>what is</title>
+		<title>w a v e  o f</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
